Refactor EquationMeta, LinearSolverMeta, and SimplifyMeta