@@ -26,35 +26,39 @@ public class TermCompiler extends BaseTermCompiler {
   public final boolean isLattice;
   public final boolean isRing;
 
-  private TermCompiler(CoreClassCallExpression classCall, boolean isRing, boolean isLattice, TypedExpression instance, RingKind kind, StdExtension ext, ExpressionTypechecker typechecker, ConcreteSourceNode marker, Values<CoreExpression> values, Set<Integer> positiveVars, boolean toInt, boolean toRat, CoreClassDefinition forcedClass) {
-    super(classCall, isRing, isLattice, instance, kind, ext, typechecker, marker, values, positiveVars, toInt, toRat);
+  private TermCompiler(CoreClassCallExpression classCall, boolean isRing, boolean isLattice, TypedExpression instance, RingKind kind, StdExtension ext, BaseEquationMeta meta, ExpressionTypechecker typechecker, ConcreteSourceNode marker, Values<CoreExpression> values, Set<Integer> positiveVars, boolean toInt, boolean toRat, CoreClassDefinition forcedClass) {
+    super(classCall, isRing, isLattice, instance, kind, ext, meta, typechecker, marker, values, positiveVars, toInt, toRat);
     this.forcedClass = forcedClass;
     this.isLattice = isLattice;
     this.isRing = isRing;
   }
 
-  private TermCompiler(CoreClassCallExpression classCall, boolean isRing, boolean isLattice, TypedExpression instance, StdExtension ext, ExpressionTypechecker typechecker, ConcreteSourceNode marker, Values<CoreExpression> values, CoreClassDefinition forcedClass) {
-    super(classCall, isRing, isLattice, instance, ext, typechecker, marker, values);
+  private TermCompiler(CoreClassCallExpression classCall, boolean isRing, boolean isLattice, TypedExpression instance, StdExtension ext, BaseEquationMeta meta, ExpressionTypechecker typechecker, ConcreteSourceNode marker, Values<CoreExpression> values, CoreClassDefinition forcedClass) {
+    super(classCall, isRing, isLattice, instance, ext, meta, typechecker, marker, values);
     this.forcedClass = forcedClass;
     this.isLattice = isLattice;
     this.isRing = isRing;
   }
 
-  public TermCompiler(CoreClassCallExpression classCall, TypedExpression instance, StdExtension ext, ExpressionTypechecker typechecker, ConcreteSourceNode marker, Values<CoreExpression> values, CoreClassDefinition forcedClass) {
-    this(classCall, isRing(classCall, ext.equationMeta, forcedClass), isLattice(classCall, ext.equationMeta, forcedClass), instance, ext, typechecker, marker, values, forcedClass);
+  public TermCompiler(CoreClassCallExpression classCall, TypedExpression instance, StdExtension ext, BaseEquationMeta meta, ExpressionTypechecker typechecker, ConcreteSourceNode marker, Values<CoreExpression> values, CoreClassDefinition forcedClass) {
+    this(classCall, isRing(classCall, meta, forcedClass), isLattice(classCall, meta, forcedClass), instance, ext, meta, typechecker, marker, values, forcedClass);
   }
 
-  private static boolean isLattice(CoreClassCallExpression classCall, EquationMeta meta, CoreClassDefinition forcedClass) {
+  private static boolean isLattice(CoreClassCallExpression classCall, BaseEquationMeta meta, CoreClassDefinition forcedClass) {
     return classCall.getDefinition().isSubClassOf(meta.BoundedDistributiveLattice) && (forcedClass == null || forcedClass.isSubClassOf(meta.BoundedDistributiveLattice));
   }
 
-  private static boolean isRing(CoreClassCallExpression classCall, EquationMeta meta, CoreClassDefinition forcedClass) {
+  private static boolean isRing(CoreClassCallExpression classCall, BaseEquationMeta meta, CoreClassDefinition forcedClass) {
     return classCall.getDefinition().isSubClassOf(meta.Ring) && (forcedClass == null || forcedClass.isSubClassOf(meta.Ring));
+  }
+
+  private BaseEquationMeta getMeta() {
+    return (BaseEquationMeta) meta;
   }
 
   @Override
   protected BaseTermCompiler newInstance(CoreClassCallExpression classCall, TypedExpression instance, RingKind kind, StdExtension ext, ExpressionTypechecker typechecker, ConcreteSourceNode marker, Values<CoreExpression> values, Set<Integer> positiveVars, boolean toInt, boolean toRat) {
-    return new TermCompiler(classCall, isRing(classCall, ext.equationMeta, forcedClass), isLattice(classCall, ext.equationMeta, forcedClass), instance, kind, ext, typechecker, marker, values, positiveVars, toInt, toRat, forcedClass);
+    return new TermCompiler(classCall, isRing(classCall, getMeta(), forcedClass), isLattice(classCall, getMeta(), forcedClass), instance, kind, ext, getMeta(), typechecker, marker, values, positiveVars, toInt, toRat, forcedClass);
   }
 
   private TermCompiler getSubTermCompiler() {
@@ -65,13 +69,13 @@ public class TermCompiler extends BaseTermCompiler {
     List<Monomial> nf1 = new ArrayList<>();
     List<ConcreteExpression> cArgs = Collections.singletonList(computeTerm(arg, nf1));
     Monomial.negate(nf1, nf);
-    return factory.app(factory.ref(meta.negativeTerm.getRef()), true, cArgs);
+    return factory.app(factory.ref(meta.negativeTerm), true, cArgs);
   }
 
   private ConcreteExpression computeMinus(CoreExpression arg1, CoreExpression arg2, List<Monomial> nf) {
     ConcreteExpression cArg1 = computeTerm(arg1, nf);
     ConcreteExpression cArg2 = computeNegative(arg2, nf);
-    return factory.app(factory.ref(meta.addTerm.getRef()), true, cArg1, cArg2);
+    return factory.app(factory.ref(meta.addTerm), true, cArg1, cArg2);
   }
 
   public static class CompiledTerm {
@@ -94,11 +98,11 @@ public class TermCompiler extends BaseTermCompiler {
   private ConcreteExpression computeTerm(CoreExpression expression, List<Monomial> nf) {
     CoreExpression expr = expression.normalize(NormalizationMode.WHNF);
     if (zroMatcher.match(expr) != null) {
-      return factory.ref(meta.zroTerm.getRef());
+      return factory.ref(meta.zroTerm);
     }
     if (ideMatcher.match(expr) != null) {
       nf.add(new Monomial(BigInteger.ONE, Collections.emptyList()));
-      return factory.ref(meta.ideTerm.getRef());
+      return factory.ref(meta.ideTerm);
     }
 
     if (subTermCompiler != null && subTermCompiler.minusMatcher != null) {
@@ -113,7 +117,7 @@ public class TermCompiler extends BaseTermCompiler {
       List<ConcreteExpression> cArgs = new ArrayList<>(2);
       cArgs.add(computeTerm(addArgs.get(0), nf));
       cArgs.add(computeTerm(addArgs.get(1), nf));
-      return factory.app(factory.ref(meta.addTerm.getRef()), true, cArgs);
+      return factory.app(factory.ref(meta.addTerm), true, cArgs);
     }
 
     List<CoreExpression> mulArgs = mulMatcher.match(expr);
@@ -127,13 +131,13 @@ public class TermCompiler extends BaseTermCompiler {
       Monomial.multiply(nf1, nf2, newNF);
       Collections.sort(newNF);
       nf.addAll(Monomial.collapse(newNF));
-      return factory.app(factory.ref(meta.mulTerm.getRef()), true, cArgs);
+      return factory.app(factory.ref(meta.mulTerm), true, cArgs);
     }
 
     if (isRing) {
       List<CoreExpression> negativeArgs = negativeMatcher.match(expr);
       if (negativeArgs != null) {
-        return computeNegative(negativeArgs.get(0), nf);
+        return computeNegative(negativeArgs.getFirst(), nf);
       }
     }
 
@@ -145,11 +149,11 @@ public class TermCompiler extends BaseTermCompiler {
       coefArgs = natCoefMatcher.match(expr);
     }
     if (coefArgs != null) {
-      CoreExpression arg = coefArgs.get(0).normalize(NormalizationMode.WHNF);
+      CoreExpression arg = coefArgs.getFirst().normalize(NormalizationMode.WHNF);
       if (arg instanceof CoreIntegerExpression) {
         BigInteger coef = ((CoreIntegerExpression) arg).getBigInteger();
         nf.add(new Monomial(coef, Collections.emptyList()));
-        return factory.app(factory.ref(meta.coefTerm.getRef()), true, Collections.singletonList(factory.number(coef)));
+        return factory.app(factory.ref(meta.coefTerm), true, Collections.singletonList(factory.number(coef)));
       } else if (subTermCompiler != null) {
         List<Monomial> newNF = new ArrayList<>();
         ConcreteExpression term = getSubTermCompiler().computeTerm(arg, newNF);
@@ -159,13 +163,13 @@ public class TermCompiler extends BaseTermCompiler {
           } else {
             nf.addAll(newNF);
           }
-          return isNeg ? factory.app(factory.ref(meta.negativeTerm.getRef()), true, term) : term;
+          return isNeg ? factory.app(factory.ref(meta.negativeTerm), true, term) : term;
         }
       }
     }
 
     int index = values.addValue(expr);
     nf.add(new Monomial(BigInteger.ONE, Collections.singletonList(index)));
-    return factory.app(factory.ref(meta.varTerm.getRef()), true, singletonList(factory.number(index)));
+    return factory.app(factory.ref(meta.varTerm), true, singletonList(factory.number(index)));
   }
 }
