@@ -2,9 +2,9 @@ package org.arend.lib.meta.simplify;
 
 import org.arend.ext.concrete.expr.ConcreteExpression;
 import org.arend.ext.concrete.expr.ConcreteReferenceExpression;
-import org.arend.ext.core.definition.CoreFunctionDefinition;
 import org.arend.ext.core.expr.CoreClassCallExpression;
 import org.arend.ext.core.expr.CoreExpression;
+import org.arend.ext.reference.ArendRef;
 import org.arend.ext.typechecking.ExpressionTypechecker;
 import org.arend.ext.typechecking.TypedExpression;
 import org.arend.ext.util.Pair;
@@ -15,16 +15,16 @@ import java.util.List;
 
 public class DoubleNegationRule extends LocalSimplificationRuleBase {
   private final FunctionMatcher negativeMatcher;
-  private final CoreFunctionDefinition negIsInv;
+  private final ArendRef negIsInv;
 
-  public DoubleNegationRule(TypedExpression instance, CoreClassCallExpression classCall, StdExtension ext, ConcreteReferenceExpression refExpr, ExpressionTypechecker typechecker, boolean isAdditive) {
-    super(instance, classCall, ext, refExpr, typechecker);
+  public DoubleNegationRule(TypedExpression instance, CoreClassCallExpression classCall, StdExtension ext, SimplifyMeta meta, ConcreteReferenceExpression refExpr, ExpressionTypechecker typechecker, boolean isAdditive) {
+    super(instance, classCall, meta, refExpr, typechecker);
     if (isAdditive) {
-      this.negativeMatcher = FunctionMatcher.makeFieldMatcher(classCall, instance, ext.equationMeta.negative, typechecker, factory, refExpr, ext, 1);
-      this.negIsInv = ext.equationMeta.negIsInv;
+      this.negativeMatcher = FunctionMatcher.makeFieldMatcher(classCall, instance, meta.negative, typechecker, factory, refExpr, ext, 1);
+      this.negIsInv = meta.negIsInv;
     } else {
-      this.negativeMatcher = FunctionMatcher.makeFieldMatcher(classCall, instance, ext.equationMeta.inverse, typechecker, factory, refExpr, ext, 1);
-      this.negIsInv = ext.equationMeta.invIsInv;
+      this.negativeMatcher = FunctionMatcher.makeFieldMatcher(classCall, instance, meta.inverse, typechecker, factory, refExpr, ext, 1);
+      this.negIsInv = meta.invIsInv;
     }
   }
 
@@ -32,13 +32,13 @@ public class DoubleNegationRule extends LocalSimplificationRuleBase {
   protected Pair<CoreExpression, ConcreteExpression> simplifySubexpression(CoreExpression subexpr) {
     List<CoreExpression> args = negativeMatcher.match(subexpr);
     if (args != null) {
-      args = negativeMatcher.match(args.get(0));
+      args = negativeMatcher.match(args.getFirst());
       if (args != null) {
-        var path = factory.appBuilder(factory.ref(negIsInv.getRef()))
+        var path = factory.appBuilder(factory.ref(negIsInv))
           .app(factory.hole(), false)
-          .app(factory.core(args.get(0).computeTyped()), false)
+          .app(factory.core(args.getFirst().computeTyped()), false)
           .build();
-        return new Pair<>(args.get(0), path);
+        return new Pair<>(args.getFirst(), path);
       }
     }
     return null;
