@@ -2,9 +2,9 @@ package org.arend.lib.meta.simplify;
 
 import org.arend.ext.concrete.expr.ConcreteExpression;
 import org.arend.ext.concrete.expr.ConcreteReferenceExpression;
-import org.arend.ext.core.definition.CoreClassField;
 import org.arend.ext.core.expr.CoreClassCallExpression;
 import org.arend.ext.core.expr.CoreExpression;
+import org.arend.ext.reference.ArendRef;
 import org.arend.ext.typechecking.ExpressionTypechecker;
 import org.arend.ext.typechecking.TypedExpression;
 import org.arend.ext.util.Pair;
@@ -16,24 +16,24 @@ import java.util.List;
 public class MonoidIdentityRule extends LocalSimplificationRuleBase {
   private final FunctionMatcher mulMatcher;
   private final FunctionMatcher ideMatcher;
-  private final CoreClassField ideLeft;
-  private final CoreClassField ideRight;
+  private final ArendRef ideLeft;
+  private final ArendRef ideRight;
 
   private final boolean isAdditive;
 
-  public MonoidIdentityRule(TypedExpression instance, CoreClassCallExpression classCall, StdExtension ext, ConcreteReferenceExpression refExpr, ExpressionTypechecker typechecker, boolean isAdditive) {
-    super(instance, classCall, ext, refExpr, typechecker);
+  public MonoidIdentityRule(TypedExpression instance, CoreClassCallExpression classCall, StdExtension ext, SimplifyMeta meta, ConcreteReferenceExpression refExpr, ExpressionTypechecker typechecker, boolean isAdditive) {
+    super(instance, classCall, meta, refExpr, typechecker);
     this.isAdditive = isAdditive;
     if (isAdditive) {
-      this.mulMatcher = FunctionMatcher.makeFieldMatcher(classCall, instance, ext.equationMeta.plus, typechecker, factory, refExpr, ext, 2);
-      this.ideMatcher = FunctionMatcher.makeFieldMatcher(classCall, instance, ext.zro, typechecker, factory, refExpr, ext, 0);
-      this.ideLeft = ext.equationMeta.addMonZroLeft;
-      this.ideRight = ext.equationMeta.addMonZroRight;
+      this.mulMatcher = FunctionMatcher.makeFieldMatcher(classCall, instance, meta.plus, typechecker, factory, refExpr, ext, 2);
+      this.ideMatcher = FunctionMatcher.makeFieldMatcher(classCall, instance, meta.zro, typechecker, factory, refExpr, ext, 0);
+      this.ideLeft = meta.addMonZroLeft;
+      this.ideRight = meta.addMonZroRight;
     } else {
-      this.mulMatcher = FunctionMatcher.makeFieldMatcher(classCall, instance, ext.equationMeta.mul, typechecker, factory, refExpr, ext, 2);
-      this.ideMatcher = FunctionMatcher.makeFieldMatcher(classCall, instance, ext.ide, typechecker, factory, refExpr, ext, 0);
-      this.ideLeft = ext.equationMeta.ideLeft;
-      this.ideRight = ext.equationMeta.ideRight;
+      this.mulMatcher = FunctionMatcher.makeFieldMatcher(classCall, instance, meta.mul, typechecker, factory, refExpr, ext, 2);
+      this.ideMatcher = FunctionMatcher.makeFieldMatcher(classCall, instance, meta.ide, typechecker, factory, refExpr, ext, 0);
+      this.ideLeft = meta.ideLeft;
+      this.ideRight = meta.ideRight;
     }
   }
 
@@ -42,15 +42,13 @@ public class MonoidIdentityRule extends LocalSimplificationRuleBase {
     List<CoreExpression> args = mulMatcher.match(subexpr);
     if (args != null) {
       var left = args.get(args.size() - 2);
-      var right = args.get(args.size() - 1);
+      var right = args.getLast();
       boolean isIdeOnTheLeft = ideMatcher.match(left) != null;
       var ide = isIdeOnTheLeft ? left : ideMatcher.match(right) != null ? right : null;
-      var value = ide == left ? right : left;
-      ConcreteExpression idePath = isIdeOnTheLeft ? factory.ref(ideLeft.getRef()) : factory.ref(ideRight.getRef());
 
       if (ide != null) {
-        var subexprPath = factory.appBuilder(idePath).app(factory.hole(), false).app(factory.core(value.computeTyped()), false).build();
-        return new Pair<>(value, subexprPath);
+        CoreExpression value = ide == left ? right : left;
+        return new Pair<>(value, factory.appBuilder(factory.ref(isIdeOnTheLeft ? ideLeft : ideRight)).app(factory.hole(), false).app(factory.core(value.computeTyped()), false).build());
       }
     }
     return null;
