@@ -16,9 +16,9 @@ public class MultiplicationByZeroRule extends LocalSimplificationRuleBase {
   private final FunctionMatcher mulMatcher;
   private final FunctionMatcher zroMatcher;
 
-  public MultiplicationByZeroRule(TypedExpression instance, CoreClassCallExpression classCall, StdExtension ext, ConcreteReferenceExpression refExpr, ExpressionTypechecker typechecker) {
-    super(instance, classCall, ext, refExpr, typechecker);
-    this.mulMatcher = FunctionMatcher.makeFieldMatcher(classCall, instance, ext.equationMeta.mul, typechecker, factory, refExpr, ext, 2);
+  public MultiplicationByZeroRule(TypedExpression instance, CoreClassCallExpression classCall, StdExtension ext, SimplifyMeta meta, ConcreteReferenceExpression refExpr, ExpressionTypechecker typechecker) {
+    super(instance, classCall, meta, refExpr, typechecker);
+    this.mulMatcher = FunctionMatcher.makeFieldMatcher(classCall, instance, meta.mul, typechecker, factory, refExpr, ext, 2);
     this.zroMatcher = FunctionMatcher.makeFieldMatcher(classCall, instance, ext.zro, typechecker, factory, refExpr, ext, 0);
   }
 
@@ -27,15 +27,13 @@ public class MultiplicationByZeroRule extends LocalSimplificationRuleBase {
     List<CoreExpression> args = mulMatcher.match(subexpr);
     if (args != null) {
       var left = args.get(args.size() - 2);
-      var right = args.get(args.size() - 1);
+      var right = args.getLast();
       boolean isZroOnTheLeft = zroMatcher.match(left) != null;
       var zro = isZroOnTheLeft ? left : zroMatcher.match(right) != null ? right : null;
       var value = zro == left ? right : left;
-      ConcreteExpression zroPath = isZroOnTheLeft ? factory.ref(ext.equationMeta.zeroMulLeft.getRef()) : factory.ref(ext.equationMeta.zeroMulRight.getRef());
 
       if (zro != null) {
-        var subexprPath = factory.appBuilder(zroPath).app(factory.hole(), false).app(factory.core(value.computeTyped()), false).build();
-        return new Pair<>(zro, subexprPath);
+        return new Pair<>(zro, factory.appBuilder(factory.ref(isZroOnTheLeft ? meta.zeroMulLeft : meta.zeroMulRight)).app(factory.hole(), false).app(factory.core(value.computeTyped()), false).build());
       }
     }
     return null;
